tests/neg-custom-args/captures/nonsensical-for-pure.scala
val x: Int^ = 2  // error
